--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="author" content="" />
   <link rel="shortcut icon" href="images/favicon.png" type="">
 
-  <title> Feane </title>
+  <title>MS BURGER</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -39,10 +39,13 @@
 
   <div class="hero_area">
     <div class="bg-box">
-      <img src="images/hero-bg.jpg" alt="">
+      <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/ZXVJxrfMvuA?autoplay=1&mute=1&controls=0&loop=1&playlist=ZXVJxrfMvuA"
+          frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </div>
     </div>
     <!-- header section strats -->
-    <header class="header_section">
+    <header class="header_section fixed-top">
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
@@ -149,7 +152,7 @@
     <section class="slider_section ">
       <div id="customCarousel1" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div class="carousel-item active" data-video="ZXVJxrfMvuA">
             <div class="container ">
               <div class="row">
                 <div class="col-md-7 col-lg-6 ">
@@ -157,9 +160,12 @@
                     <h1>
                       Just One <br> More Bite
                     </h1>
-
+                    <p>"The ultimate internal struggle: You’re down to the last corner of that toasted brioche bun, your
+                      hands are a mess, and your stomach says 'stop,' but your heart says 'just one more bite.' 🍔✨ We
+                      don’t make snacks; we make burgers you can't walk away from. Come see which one wins the battle
+                      today."</p>
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="#menu" class="btn1">
                         Order Now
                       </a>
                     </div>
@@ -168,7 +174,7 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item ">
+          <div class="carousel-item " data-video="ZXVJxrfMvuA">
             <div class="container ">
               <div class="row">
                 <div class="col-md-7 col-lg-6 ">
@@ -178,7 +184,7 @@
                     </h1>
 
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="#menu" class="btn1">
                         Order Now
                       </a>
                     </div>
@@ -187,7 +193,7 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item" data-video="ZXVJxrfMvuA">
             <div class="container ">
               <div class="row">
                 <div class="col-md-7 col-lg-6 ">
@@ -197,7 +203,7 @@
                     </h1>
 
                     <div class="btn-box">
-                      <a href="" class="btn1">
+                      <a href="#menu" class="btn1">
                         Order Now
                       </a>
                     </div>
@@ -229,7 +235,7 @@
           <div class="col-md-6  ">
             <div class="box ">
               <div class="img-box">
-                <img src="images/o1.jpg" alt="">
+                <img src="images/o1.jpg" alt="Tasty Thursdays Offer">
               </div>
               <div class="detail-box">
                 <h5>
@@ -300,7 +306,7 @@
           <div class="col-md-6  ">
             <div class="box ">
               <div class="img-box">
-                <img src="images/o2.jpg" alt="">
+                <img src="images/o2.jpg" alt="Pizza Days Offer">
               </div>
               <div class="detail-box">
                 <h5>
@@ -377,7 +383,7 @@
 
   <!-- food section -->
 
-  <section class="food_section layout_padding-bottom">
+  <section class="food_section layout_padding-bottom" id="menu">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -399,7 +405,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f1.png" alt="">
+                  <img src="images/f1.png" alt="Delicious Pizza">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -478,7 +484,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f2.png" alt="">
+                  <img src="images/f2.png" alt="Delicious Burger">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -557,7 +563,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f3.png" alt="">
+                  <img src="images/f3.png" alt="Delicious Pizza">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -636,7 +642,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f4.png" alt="">
+                  <img src="images/f4.png" alt="Delicious Pasta">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -715,7 +721,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f5.png" alt="">
+                  <img src="images/f5.png" alt="French Fries">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -794,7 +800,7 @@
             <div class="box">
               <div>
                 <div class="img-box">
-                  <img src="images/f6.png" alt="">
+                  <img src="images/f6.png" alt="Delicious Pizza">
                 </div>
                 <div class="detail-box">
                   <h5>
@@ -1345,10 +1351,10 @@
       </div>
       <div class="footer-info">
         <p>
-          &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a><br><br>
+          &copy; <span id="displayYear"></span> All Rights Reserved By MS Burger
+          <br><br>
           &copy; <span id="displayYear"></span> Distributed By
-          <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
+          <a href="https://themewagon.com/" target="_blank">Shahry Ahamed</a>
         </p>
       </div>
     </div>
