change bg video

--- a/index.html
+++ b/index.html
@@ -1332,7 +1332,7 @@
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </a>
               <a href="">
-                <i class="fa fa-pinterest" aria-hidden="true"></i>
+                <i class="fa fa-pinterest" aria-hidden="tt inirue"></i>
               </a>
             </div>
           </div>
