--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
 
   <div class="hero_area">
     <div class="bg-box">
-      <div class="video-container">
-        <iframe src="https://www.youtube.com/embed/ZXVJxrfMvuA?autoplay=1&mute=1&controls=0&loop=1&playlist=ZXVJxrfMvuA"
-          frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-      </div>
+      <img src="images/hero-bg.png" alt="">
     </div>
     <!-- header section strats -->
     <header class="header_section fixed-top">
@@ -1170,40 +1167,45 @@
       <div class="row">
         <div class="col-md-6">
           <div class="form_container">
-            <form action="">
+            <form action="https://api.web3forms.com/submit" method="POST">
+              <input type="hidden" name="access_key" value="394b5ab4-c2ba-492f-84dc-8efe678048af">
               <div>
-                <input type="text" class="form-control" placeholder="Your Name" />
+                <input type="text" name="name" class="form-control" placeholder="Your Name" required />
               </div>
               <div>
-                <input type="text" class="form-control" placeholder="Phone Number" />
+                <input type="text" name="phone" class="form-control" placeholder="Phone Number" />
               </div>
               <div>
-                <input type="email" class="form-control" placeholder="Your Email" />
+                <input type="email" name="email" class="form-control" placeholder="Your Email" required />
               </div>
               <div>
-                <select class="form-control nice-select wide">
+                <select name="persons" class="form-control nice-select wide">
                   <option value="" disabled selected>
                     How many persons?
                   </option>
-                  <option value="">
+                  <option value="2">
                     2
                   </option>
-                  <option value="">
+                  <option value="3">
                     3
                   </option>
-                  <option value="">
+                  <option value="4">
                     4
                   </option>
-                  <option value="">
+                  <option value="5">
                     5
                   </option>
                 </select>
               </div>
               <div>
-                <input type="date" class="form-control">
+                <input type="date" name="date" class="form-control">
+              </div>
+              <div>
+                <textarea name="message" class="form-control" placeholder="Message" required
+                  style="height: 100px; margin-bottom: 25px; padding-left: 25px; border: 1px solid #999; border-radius: 5px;"></textarea>
               </div>
               <div class="btn_box">
-                <button>
+                <button type="submit">
                   Book Now
                 </button>
               </div>
