--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
 </head>
 
 <body>
+  <!-- welcome section -->
+  <div id="welcome-overlay">
+    <div class="welcome-content">
+      <h1 class="welcome-text">WELCOME TO MS BURGER</h1>
+      <div class="welcome-loader"></div>
+    </div>
+  </div>
 
   <div class="hero_area">
     <div class="bg-box">
@@ -1129,7 +1136,8 @@
       <div class="row">
         <div class="col-md-6 ">
           <div class="img-box">
-            <img src="images/about-img.png" alt="">
+            <img src="images/about-img.png" alt="" data-tilt data-tilt-scale="1.05" data-tilt-max="15"
+              data-tilt-speed="400" data-tilt-perspective="1000">
           </div>
         </div>
         <div class="col-md-6">
@@ -1183,6 +1191,9 @@
                   <option value="" disabled selected>
                     How many persons?
                   </option>
+                  <option value="1">
+                    1
+                  </option>
                   <option value="2">
                     2
                   </option>
@@ -1191,9 +1202,6 @@
                   </option>
                   <option value="4">
                     4
-                  </option>
-                  <option value="5">
-                    5
                   </option>
                 </select>
               </div>
@@ -1380,6 +1388,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
   <!-- custom js -->
   <script src="js/custom.js"></script>
+  <!-- Vanilla Tilt -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.0/vanilla-tilt.min.js"></script>
   <!-- Google Map -->
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
   </script>
